Fix alert z-index (#372)
* Fix alert z-index

* z-index reshuffle

--- a/administrator/templates/atum/css/template-rtl.css
+++ b/administrator/templates/atum/css/template-rtl.css
@@ -246,7 +246,7 @@ legend {
   position: fixed;
   top: 15px;
   left: 50%;
-  z-index: 1031;
+  z-index: 1080;
   margin-left: 125px;
   transition: all .5s ease;
   -webkit-transform: translateX(-50%);
@@ -569,15 +569,16 @@ iframe {
       padding: 8px 10px;
       font-size: 14px; } }
 
-.modal .btn {
-  margin-right: .5rem; }
-
-.modal .btn-primary:not([href]),
-.modal .btn-success:not([href]) {
-  color: #fff; }
-  .modal .btn-primary:not([href]):hover,
-  .modal .btn-success:not([href]):hover {
+.modal {
+  z-index: 1080; }
+  .modal .btn {
+    margin-right: .5rem; }
+  .modal .btn-primary:not([href]),
+  .modal .btn-success:not([href]) {
     color: #fff; }
+    .modal .btn-primary:not([href]):hover,
+    .modal .btn-success:not([href]):hover {
+      color: #fff; }
 
 .modal-header {
   padding: 0 15px; }
@@ -1374,7 +1375,7 @@ joomla-alert {
     box-shadow: -1px 0 0 rgba(0, 0, 0, 0.05); }
     .nav.nav-tabs .nav-link.active {
       background-color: rgba(0, 0, 0, 0.03);
-      background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.05) 100%);
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05) 100%);
       border-right: 0;
       border-left: 0;
       border-top-left-radius: 0;
