--- a/administrator/templates/atum/scss/blocks/_alerts.scss
+++ b/administrator/templates/atum/scss/blocks/_alerts.scss
@@ -12,7 +12,7 @@
   position: fixed;
   top: 15px;
   left: 50%;
-  z-index: 1031;
+  z-index: 1080;
   margin-left: 125px;
   transition: all .5s ease;
   transform: translateX(-50%);
